[2단계 - 블랙잭(베팅)] 썬(윤선용) 미션 제출합니다. (#343)
* refactor: 인터페이스에서 추상 클래스 의존성 제거

* feat: 베팅 금액 음수 예외 처리

* docs: 기능 목록 추가 작성

* feat: 플레이어 생성시 베팅도 입력 받도록 변경

* refactor: 결과 계산 메서드로 추출

* feat: 수익률 및 블랙잭 승리에 대한 상태 추가

* feat: 최종 수익 계산

* refactor: 불필요한 클래스 삭제 및 베팅에 따른 테스트 추가

* refactor: 승무패 판별 로직

* refactor: BettingResult가 Player와 PlayerResult를 가지고 있도록 수정

* refactor: predicate 제거 후 if문으로 우승자 판별

* refactor: Participant 골격 인터페이스에서 추상 클래스로 변경

* refactor: Profit 추가 및 그에 따른 수정

* refactor: Bet에서 수익을 계산하도록 변경